--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^6.1.0
   provider: ^6.1.5+1
   carousel_slider: ^5.1.1
+  rating: ^1.0.0-dev.1
+  bar: ^1.0.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
