Hoan thanh gio hang

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   rating: ^1.0.0-dev.1
   bar: ^1.0.1
   flutter_rating_bar: ^4.0.1
+  quantity_input: ^1.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
