--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ migrate_working_dir/
 .pub/
 /build/
 /coverage/
+# Firebase configurations
+lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+android/app/google-services.json
+macos/Runner/GoogleService-Info.plist
 
 # Symbolication related
 app.*.symbols
