--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   quantity_input: ^1.0.2
   intl: ^0.17.0
+  firebase_auth: ^6.1.3
 
 dev_dependencies:
   flutter_test:
