--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   quantity_input: ^1.0.2
   intl: ^0.17.0
   firebase_auth: ^6.1.3
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
