--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   intl: ^0.17.0
   firebase_auth: ^6.1.3
   shared_preferences: ^2.5.4
+  http: ^1.6.0
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
